✨ feat: set up Sign in with Google

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -26,7 +26,8 @@
     "no-shadow": "off",
     "no-underscore-dangle": "off",
     "no-plusplus": "off",
-    "default-case": "off"
+    "default-case": "off",
+    "no-undef": "off"
   },
   "settings": {
     "import/resolver": {
