♻️ refactor: refactor D3 LifeDot and util function

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -28,7 +28,8 @@
     "no-plusplus": "off",
     "default-case": "off",
     "no-undef": "off",
-    "no-use-before-define": "off"
+    "no-use-before-define": "off",
+    "no-param-reassign": "off"
   },
   "settings": {
     "import/resolver": {
