🔥 chore: modify assets directory

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -30,7 +30,8 @@
     "no-undef": "off",
     "no-use-before-define": "off",
     "no-param-reassign": "off",
-    "no-continue": "off"
+    "no-continue": "off",
+    "array-callback-return": "off"
   },
   "settings": {
     "import/resolver": {
